# rust-socket-ipc-demo

./: Cargo.toml
src/: client.rs  example_main.rs  main.rs  server.rs
