[package]
name = "rust-socket-ipc-demo"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.68"
futures = "0.3.25"
interprocess = {version="1.2.1", features=["tokio_support"]}
tokio = { version = "1.8", features=["net", "time", "io-util", "rt", "macros", "rt-multi-thread", "sync"]}
